tests/NormalTests/paczka1/fuzzy1/93464452.err
Error in line 1: Z04d8US6jF S575 17,9
Error in line 12: OO5MK5j9bl S575 54,4
Error in line 4: vTFZBZfAL A859 28,4
Error in line 8: Z04d8US6jF A31 27,2
Error in line 16: caZSJ0 A31 4,2
Error in line 17: Z04d8US6jF A351 76,6
Error in line 22: OO5MK5j9bl S575 91,0
